link to tutorial

--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-hello
+Tutorial materials:
+<UL>
+  <LI><a href="https://github.com/lpsmodsimteam/sst_statistics_tutorial">github.com/lpsmodsimteam/sst_statistics_tutorial</a></LI>
+</UL>
