link to containers

--- a/index.html
+++ b/index.html
@@ -2,3 +2,8 @@ Tutorial materials:
 <UL>
   <LI><a href="https://github.com/lpsmodsimteam/sst_statistics_tutorial">github.com/lpsmodsimteam/sst_statistics_tutorial</a></LI>
 </UL>
+
+Utilties:
+<UL>
+  <LI><a href="https://github.com/tactcomplabs/sst-containers">github.com/tactcomplabs/sst-containers</a></LI>
+</UL>
