--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 Tutorial materials:
 <UL>
   <LI><a href="https://github.com/lpsmodsimteam/sst_statistics_tutorial">github.com/lpsmodsimteam/sst_statistics_tutorial</a></LI>
+  <LI><a href="https://github.com/lpsmodsimteam/sst_logging_tutorial">github.com/lpsmodsimteam/sst_logging_tutorial</a></LI>
 </UL>
 
 Utilties:
