--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 Tutorial materials:
 <UL>
+  <LI><a href="https://github.com/lpsmodsimteam/sst_introductory_tutorial">github.com/lpsmodsimteam/sst_introductory_tutorial</a></LI>
   <LI><a href="https://github.com/lpsmodsimteam/sst_statistics_tutorial">github.com/lpsmodsimteam/sst_statistics_tutorial</a></LI>
   <LI><a href="https://github.com/lpsmodsimteam/sst_logging_tutorial">github.com/lpsmodsimteam/sst_logging_tutorial</a></LI>
   <LI><a href="https://www.youtube.com/watch?v=ipxoVb2dEcw&list=PLgehegDe4T2y1badxrxcuvIsX42V64t2x">YouTube video of SST</a>; see also <a href="https://github.com/lpsmodsimteam/sst-video-demo-examples">github.com/lpsmodsimteam/sst-video-demo-examples</a></LI>
