--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
-Tutorial materials:
+<H2>Structural Simulation Toolkit (SST)</H2>
+<P></P>Official SST documentation is on <a href="http://sst-simulator.org/">sst-simulator.org/</a> and a subpage <a href="http://sst-simulator.org/sst-docs/">sst-simulator.org/sst-docs/</a></P>
+
+<P>Official <a href="https://github.com/orgs/sstsimulator/repositories">SST repos</a>:</P>
+<UL>
+  <LI><a href="https://github.com/sstsimulator/sst-core">github.com/sstsimulator/sst-core</a></LI>
+  <LI><a href="https://github.com/sstsimulator/sst-elements">github.com/sstsimulator/sst-elements</a></LI>
+  <LI><a href="https://github.com/sstsimulator/sst-macro">github.com/sstsimulator/sst-macro</a></LI>
+  <LI><a href="https://github.com/sstsimulator/sst-docs">github.com/sstsimulator/sst-docs</a></LI>
+</UL>
+
+Unofficial tutorial materials:
 <UL>
   <LI><a href="https://github.com/lpsmodsimteam/sst_introductory_tutorial">github.com/lpsmodsimteam/sst_introductory_tutorial</a></LI>
   <LI><a href="https://github.com/jleidel/sst-documentation/tree/Level3Container">github.com/jleidel/sst-documentation in the Level3Container branch</a></LI>
