--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <BODY>
 
     <h2>A Survey of Software for Simulating Computers, Networks, Memory, HPCs</h2>
-      <P>Includes deprecated software</P>
+      <P>Includes deprecated software.</P>
       <P>Want to contribute something to this page? <BR>
         Submit a Pull Request to <a href="https://github.com/lpsmodsimteam/lpsmodsimteam.github.io">github.com/lpsmodsimteam/lpsmodsimteam.github.io</P>
       </P>
