--- a/index.html
+++ b/index.html
@@ -83,9 +83,13 @@
     <h2>A Survey of Software for Simulating Computers, Networks, Memory, HPCs</h2>
       <P>Includes deprecated software.</P>
       <P>Want to contribute something to this page? <BR>
-        Submit a Pull Request to <a href="https://github.com/lpsmodsimteam/lpsmodsimteam.github.io">github.com/lpsmodsimteam/lpsmodsimteam.github.io</P>
+        Submit a Pull Request to <a href="https://github.com/lpsmodsimteam/lpsmodsimteam.github.io">github.com/lpsmodsimteam/lpsmodsimteam.github.io</a></P>
       </P>
-    <P>Disclaimers: Inclusion of software doesn't imply endorsement. Software has not been tested and may not work. </P>
+    <P>Disclaimers:</P>
+    <UL>
+      <LI>Inclusion of software on the page (or forked repos) doesn't imply endorsement by anyone.</LI>
+      <LI>Software has not been tested and may not work.</LI>
+    </UL>   
     
     <div id="toc_container">
     <p class="toc_title">Contents</p>
