lists on wikipedia

--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
       <P>
         <a href="https://en.wikipedia.org/wiki/Discrete-event_simulation">en.wikipedia.org/wiki/Discrete-event_simulation</a>
       </P>
-
+      <P><a href="https://en.wikipedia.org/wiki/List_of_discrete_event_simulation_software">en.wikipedia.org/wiki/List_of_discrete_event_simulation_software</a>
+      </P>
     <fieldset><legend><H3 id="SST">Structural Simulation Toolkit (SST)</H3></legend>
       
         <P></P>Official SST documentation is on <a href="http://sst-simulator.org/">sst-simulator.org/</a> and a subpage <a href="http://sst-simulator.org/sst-docs/">sst-simulator.org/sst-docs/</a></P>
@@ -187,7 +188,8 @@
         </fieldset>
       </fieldset><!-- processor -->
     <HR>
-    <fieldset><legend><H2 id="VHDL">VHDL</H2></legend>
+    <fieldset><legend><H2 id="HDL">HDL</H2></legend>
+      <a href="https://en.wikipedia.org/wiki/List_of_HDL_simulators">en.wikipedia.org/wiki/List_of_HDL_simulators</a>
     
     <fieldset><legend>VHDL 2008/93/87 simulator</legend>
     <a href="http://ghdl.free.fr/">ghdl.free.fr</a>
