--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
       <fieldset><legend>mic1</legend>
     <P>mic1 is a Java-based simulator which implements the Mic-1 microarchitecture</P>
-      <a href="https://www.ontko.com/mic1/">
+      <a href="https://www.ontko.com/mic1/">www.ontko.com/mic1/</a>
     </P>  
       </fieldset>
         <fieldset><legend>logisim</legend>
