--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       </OL>
       <LI><a href="#nework_simulation">Network Simulators</a></LI>
       <LI><a href="#processor_simulation">Processor Simulators</a></LI>
-      <LI><a href="#VHDL">VHDL</a></LI>
+      <LI><a href="#HDL">HDL</a></LI>
       <LI><a href="#survey_of_simulation_surveys">Survey of Simulation Surveys</a></LI>
     </OL>
     </div>
