--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
     <fieldset><legend>VHDL 2008/93/87 simulator</legend>
     <a href="http://ghdl.free.fr/">ghdl.free.fr</a>
     </P>
+    </fieldset><!-- GHDL -->
     </fieldset><!-- VHDL -->
-      
     <HR>
   
     <fieldset><legend><H2 id="survey_of_simulation_surveys">Survey of Simulation Surveys</H2></legend>
