--- a/index.html
+++ b/index.html
@@ -163,6 +163,10 @@
 
     <fieldset><legend><H2 id="nework_simulation">Network Simulators</H2></legend>
 
+            <fieldset><legend>NS-3</legend>
+            <a href="https://www.nsnam.org/">nsnam.org</a>
+            </fieldset>
+      
       <fieldset><legend>TOPAZ</legend>
       <a href="https://github.com/abadp/tpzsimul">github.com/abadp/tpzsimul</a>; as of 2023-10-14, last update was July 2015.<BR>
       <a href="https://ieeexplore.ieee.org/document/6209268">TOPAZ: An Open-Source Interconnection Network Simulator for Chip Multiprocessors and Supercomputers</a>
