--- a/index.html
+++ b/index.html
@@ -237,6 +237,13 @@
             <fieldset><legend>NS-3</legend>
             <a href="https://www.nsnam.org/">nsnam.org</a>
             </fieldset>
+
+    <fieldset><legend>OMNet++</legend>
+    
+      <a href="https://en.wikipedia.org/wiki/OMNeT%2B%2B">wikipedia.org/wiki/OMNeT++</a><BR>
+      <a href="https://omnetpp.org/">omnetpp.org</a><BR>
+      <a href="https://github.com/omnetpp/omnetpp">github.com/omnetpp/omnetpp</a>
+    </fieldset>
       
       <fieldset><legend>TOPAZ</legend>
       <a href="https://github.com/abadp/tpzsimul">github.com/abadp/tpzsimul</a>; as of 2023-10-14, last update was July 2015.<BR>
