--- a/sst_frequently_asked_questions.html
+++ b/sst_frequently_asked_questions.html
@@ -77,6 +77,29 @@
 
   <P>&nbsp;</P>
 
+  <BR>
+  <fieldset>
+    <legend>
+      <I>Question</I>:
+      <a name="What makes SST distinct from other DES options?">
+               What makes SST distinct from other DES options?</a>
+    </legend>
+
+    <P><I>Response</I>: <BR>
+        SST as a framework for DES is not focused on a specific problem or domain.
+
+        <P>SST supports distributed computation using MPI.</P>
+    <P>
+      <!--
+    <P>
+      <I>Related questions</I>:
+      <UL>
+        <LI><a href="#"></a></LI>
+      </UL>
+    </P>
+  -->
+  </fieldset>
+<BR>
   <fieldset>
     <legend>
       <I>Question</I>:
@@ -779,7 +802,7 @@ Partitioner can be parallelized using Zoltan.
     </P>
   </fieldset>
 
-    
+
   <!--
   <BR>
   <fieldset>
