--- a/index.html
+++ b/index.html
@@ -235,11 +235,15 @@
     <h2>Tutorial content needed for SST</h2>
     <ul>
       <LI>what is <a href="https://en.wikipedia.org/wiki/Discrete-event_simulation">DES</a>? </li>
-      <LI>SST vs other computer architecture simulation software like Verilator, ns3, OMNet++, gem5</li>
+      <LI>SST vs other computer architecture simulation software like
+        <a href="#verilator">Verilator</a>,
+        <a href="#ns3">ns3</a>,
+        <a href="#omnet">OMNet++</a>,
+        <a href="#gem5">gem5</a></li>
 <LI>Is SST cycle accurate?</li>
 <LI>how does SST relate to DES?</li>
 <LI>how does SST compare to alternative DES options?</li>
-<ul><li>PySim</li></ul>
+<ul><li><a href="#simpy">SimPy</a></li></ul>
 <LI>How to specify arch using Python driver file</li>
 <LI>How to specify complicated arch using Python ahp_graph</li>
 <LI>Why is running my MPI application on a simulated HPC architecture non-trivial?</li>
@@ -254,13 +258,13 @@
 <LI>quickstart for SST -- run a (serial) demo</li>
 <LI>quickstart for SST -- run a SST demo that uses MPI</li>
 <LI>how to install SST baremetal</li>
-<LI>How to run SST from a container</li>
-<LI>how to create a new SST component from scratch</li>
+<LI>How to run SST from a container: <a href="https://github.com/lpsmodsimteam/sst-containers">github.com/lpsmodsimteam/sst-containers</a></li>
+<LI>how to create a new SST component from scratch: <a href="https://github.com/lpsmodsimteam/sst_introductory_tutorial">github.com/lpsmodsimteam/sst_introductory_tutorial</a></li>
 <LI>how to leverage an existing SST element</li>
 <LI>how to combine existing SST elements</li>
 <LI>an overview of SST-core</li>
-<LI>an overview of statistics in SST</li>
-<LI>Can sst run faster on gpus or fpga?</li>
+<LI>an overview of statistics in SST: <a href="https://github.com/lpsmodsimteam/sst_statistics_tutorial">github.com/lpsmodsimteam/sst_statistics_tutorial</a></li>
+<LI>Can sst run faster on GPUs or FPGA?</li>
 <LI>How does SST use ml or ai or llm?</li>
 </ul>
 
@@ -328,7 +332,7 @@
       <a href="https://en.wikipedia.org/wiki/List_of_HDL_simulators">en.wikipedia.org/wiki/List_of_HDL_simulators</a>
 
 
-    <fieldset><legend>Verilator</legend>
+    <fieldset><legend id="verilator">Verilator</legend>
     <a href="https://www.veripool.org/verilator/">Verilog/SystemVerilog simualtor</a>
     </fieldset>
 <BR>
